Not sure why header's bottom border was 75%, it was too short. Changed to 100% and it looks correct.

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ h3 {
   text-align: center; }
 
 #header hr {
-  width: 75%; height: 1px;
+  width: 100%; height: 1px;
   color: #ddd;
   background-color: #ddd; 
   border: 0; }
